--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   intl: ^0.18.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
