--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_fonts: ^4.0.4
   intl: ^0.18.1
   image_picker: ^0.8.7+5
-  camera: 0.9.4+3
+  #camera: 0.9.4+3
   path_provider: ^2.0.15
   path: ^1.8.2
 
